# japanterebi-xmltv

./: .gitignore  LICENSE  README.md  channels.json  guide.xml  japanterebi.channels.xml  pyproject.toml  requirements.txt
.github/workflows/: update.yaml
japanterebi_xmltv/: __init__.py  models.py
japanterebi_xmltv/scripts/: __init__.py  concatenate.py  fetcher.py  filter.py  fix.py  merger.py  minify.py
maintenance/: clean.sh  lint.sh  update.sh
mypy-report/: index.html
mypy-report/html/japanterebi_xmltv/: __init__.py.html  models.py.html
mypy-report/html/japanterebi_xmltv/scripts/: __init__.py.html  fetcher.py.html  filter.py.html  fix.py.html  merger.py.html  minify.py.html
partial/: guide@jcom.xml  guide@mxtv.xml  guide@nhk.xml  guide@nhkworldpremium.xml  japanterebi@jcom.channels.xml  japanterebi@mxtv.channels.xml  japanterebi@nhk.channels.xml  japanterebi@nhkworldpremium.channels.xml  japanterebi@skyperfectv.channels.xml
scripts/: fetcher.py  filter.py  fix.py  merger.py  minify.py  model.py
